bookstore.mvc re-created

--- a/BookStore.Mvc/appsettings.json
+++ b/BookStore.Mvc/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "BookStoreConnection": "Server=127.0.0.1;Database=BookStoreDB;User Id=sa;Password=<YourStrong@Passw0rd>;"
+    "DefaultConnection": "Server=127.0.0.1;Database=BookStoreDB;User Id=sa;Password=<YourStrong@Passw0rd>;"
   },
   "Logging": {
     "LogLevel": {
