--- a/BookStore.Mvc/BookStore.Mvc.csproj
+++ b/BookStore.Mvc/BookStore.Mvc.csproj
@@ -14,4 +14,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.0" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <ProjectReference Include="..\BookStore.Infrastructure.Data\BookStore.Infrastructure.Data.csproj" />
+  </ItemGroup>
+
 </Project>
