--- a/BookStore.Mvc/appsettings.json
+++ b/BookStore.Mvc/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=127.0.0.1;Database=BookStoreDB;User Id=sa;Password=<YourStrong@Passw0rd>;"
+    "BookStoreIdentityDb": "Server=127.0.0.1;Database=BookStoreIdentityDB;User Id=sa;Password=<YourStrong@Passw0rd>;",
+    "BookStoreDb": "Server=127.0.0.1;Database=BookStoreDB;User Id=sa;Password=<YourStrong@Passw0rd>;"
   },
   "Logging": {
     "LogLevel": {
