--- a/BookStore.Mvc/BookStore.Mvc.csproj
+++ b/BookStore.Mvc/BookStore.Mvc.csproj
@@ -19,4 +19,9 @@
     <ProjectReference Include="..\BookStore.Infrastructure.Data\BookStore.Infrastructure.Data.csproj" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <Folder Include="Data\Migrations\" />
+  </ItemGroup>
+
 </Project>
