--- a/BookStore.Mvc/BookStore.Mvc.csproj
+++ b/BookStore.Mvc/BookStore.Mvc.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BookStore.Infrastructure.Data\BookStore.Infrastructure.Data.csproj" />
+    <ProjectReference Include="..\BookStore.Infrastructure.IoC\BookStore.Infrastructure.IoC.csproj" />
   </ItemGroup>
 
 
