api swagger and controller added

--- a/BookStore.Api/appsettings.json
+++ b/BookStore.Api/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=127.0.0.1;Database=BookStoreDB;User Id=sa;Password=<YourStrong@Passw0rd>;"
+  },
   "AllowedHosts": "*"
 }
