--- a/BookStore.Api/appsettings.Development.json
+++ b/BookStore.Api/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=127.0.0.1;Database=BookStoreDB;User Id=sa;Password=<YourStrong@Passw0rd>;"
+    "BookStoreDb": "Server=127.0.0.1;Database=BookStoreDB;User Id=sa;Password=<YourStrong@Passw0rd>;"
   }
 }
