--- a/BookStore.Api/appsettings.json
+++ b/BookStore.Api/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=127.0.0.1;Database=BookStoreDB;User Id=sa;Password=<YourStrong@Passw0rd>;"
+    "BookStoreDb": "Server=127.0.0.1;Database=BookStoreDB;User Id=sa;Password=<YourStrong@Passw0rd>;"
   },
   "AllowedHosts": "*"
 }
