Controllers and commands added

--- a/BookStore.Mvc/BookStore.Mvc.csproj
+++ b/BookStore.Mvc/BookStore.Mvc.csproj
@@ -20,6 +20,7 @@
 
 
   <ItemGroup>
+    <ProjectReference Include="..\BookStore.Application\BookStore.Application.csproj" />
     <ProjectReference Include="..\BookStore.Infrastructure.IoC\BookStore.Infrastructure.IoC.csproj" />
   </ItemGroup>
 
