Auth Service, Auth Repository, Swagger, Jwt Authentication

--- a/BookStore.Api/appsettings.Development.json
+++ b/BookStore.Api/appsettings.Development.json
@@ -8,5 +8,10 @@
   },
   "ConnectionStrings": {
     "BookStoreDb": "Server=127.0.0.1;Database=BookStoreDB;User Id=sa;Password=<YourStrong@Passw0rd>;"
+  },
+  "JWT": {
+    "Audience": "burak.seyhan",
+    "Issuer": "burak.seyhan",
+    "Key" :  "burakseyhan_burakseyhan_seyhanburak"
   }
 }
