--- a/BookStore.Api/Properties/launchSettings.json
+++ b/BookStore.Api/Properties/launchSettings.json
@@ -20,7 +20,7 @@
     "BookStore.Api": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "category",
+      "launchUrl": "swagger",
       "applicationUrl": "https://localhost:5003;http://localhost:5004",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
